# matlab-mcp-server-python

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.test.yml  docker-compose.yml  environment-dev.yml  environment.yml  glama.json  install.bat  pyproject.toml  requirements-lock.txt  update_vendor.bat
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md
.planning/phases/01-fastmcp-3-0-upgrade/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-auth-config-bearer-token-middleware/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-streamable-http-transport-session-routing/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-human-in-the-loop-approval/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-windows-10-platform-hardening/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-documentation-agent-onboarding/: 06-01-PLAN.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: agent-onboarding.md  windows-deployment.md
examples/: async_simulation.m  basic_usage.m  config_minimal.yaml  config_multiuser.yaml  custom_tools.yaml  plotting_examples.m  signal_processing.m
scripts/: generate_changelog.py  generate_docs.py
src/matlab_mcp/: __init__.py  config.py  server.py
tests/: conftest.py  remote_client.py  test_auth_middleware.py  test_config.py  test_coverage_gaps.py  test_engine_mock.py  test_executor_extra.py  test_file_read.py  test_hitl.py  test_integration_figures.py  test_jobs.py  test_mcp_integration.py  test_monitoring_collector.py  test_monitoring_dashboard.py  test_monitoring_extra.py  test_monitoring_health.py  test_monitoring_routes.py  test_monitoring_store.py  test_monitoring_tools.py  test_output.py  test_output_extra.py  test_plotly_conversion_fixtures.py  test_plotly_style_mapper.py  test_pool.py  test_security.py  test_server.py  test_session.py  test_subplot_layout.py  test_tools.py  test_tools_admin.py  test_tools_custom.py  test_tools_discovery.py  test_tools_files.py  test_tools_jobs.py
tests/mocks/: matlab_engine_mock.py
wiki/: Architecture.md  Async-Jobs.md  Configuration.md  Custom-Tools.md  Examples.md  FAQ.md  Home.md  Installation.md  MCP-Tools-Reference.md  SETUP_WIKI.md  Security.md  Troubleshooting.md
(+74 files in other folders)
