[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matlab-mcp-server"
version = "0.1.0"
description = "MCP server exposing MATLAB capabilities to AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "fastmcp>=2.0.0,<3.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "Pillow>=9.0.0",
    "aiosqlite>=0.19.0",
    "plotly>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
monitoring = ["psutil>=5.9.0", "uvicorn>=0.20.0"]

[project.scripts]
matlab-mcp = "matlab_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "matlab: tests requiring a live MATLAB engine",
]

[tool.hatch.build.targets.wheel]
packages = ["src/matlab_mcp"]

[tool.ruff]
target-version = "py39"
line-length = 100
