[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matlab-mcp-python"
version = "1.4.1"
description = "MCP server exposing MATLAB capabilities to AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Hannes Suhr" },
]
keywords = ["matlab", "mcp", "model-context-protocol", "ai", "agent", "claude", "cursor", "copilot", "plotly", "matlab-engine", "scientific-computing", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Framework :: FastAPI",
]
dependencies = [
    "fastmcp>=2.0.0,<3.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "Pillow>=9.0.0",
    "aiosqlite>=0.19.0",
    "plotly>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "psutil>=5.9.0",
    "uvicorn>=0.20.0",
    "pip-audit>=2.6.0",
    "build>=1.0.0",
]
monitoring = ["psutil>=5.9.0", "uvicorn>=0.20.0"]

[project.urls]
Homepage = "https://github.com/HanSur94/matlab-mcp-server-python"
Repository = "https://github.com/HanSur94/matlab-mcp-server-python"
Issues = "https://github.com/HanSur94/matlab-mcp-server-python/issues"
Wiki = "https://github.com/HanSur94/matlab-mcp-server-python/wiki"

[project.scripts]
matlab-mcp = "matlab_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "matlab: tests requiring a live MATLAB engine",
]

[tool.hatch.build.targets.wheel]
packages = ["src/matlab_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100
